--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="/p.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="/p.jpg.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>THARANI P</h1>
             <p>FRONTEND DEVELOPER</p>
         </div>
@@ -164,7 +164,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="/r.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="/r.pdf.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>c:\Users\Saint gobain\Desktop\NM PROJECT\portfolio-main\r.pdf.pdf
         
