--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="/r.pdf.pdf" target="_blank" class="download-button">Download CV</a>
+            <<a href="r.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>c:\Users\Saint gobain\Desktop\NM PROJECT\portfolio-main\r.pdf.pdf
         
